fix spacing

--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -21,6 +21,7 @@
 .navItem {
   padding: 8px 16px;
   text-align: center;
+  white-space: nowrap;
 }
 .navItem:hover {
   cursor: pointer;
