--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,4 +32,13 @@
     align-items: center;
     justify-content: center;
   }
+  .main .title h1 {
+    font-size: 1.5rem;
+    line-height: 0.5rem;
+  }
+  .main .title h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 3rem;
+  }
 }
